# DHParser

./: .env  .gitignore  .noseids  .readthedocs.yaml  CHANGES.txt  CONTRIBUTING.md  DSLsupport.py  EBNFcompiler.py  Hole_MLW-Software.py  Installiere-MLW.py  Introduction.md  LICENSE.txt  MANIFEST.in  ParserCombinators.py  ParserCombinators_copy.py  ParserCombinators_obsolete.py  README.md  Roadmap.md  TODO.md  TODO.txt  __init__.py  build.py  build_cython-modules.bat  build_cython-modules.sh  buildpackages.bat  buildpackages.sh  cythonize_stringview.sh  dhparser.py  logging.py  logs.py  nosetests.xml  parser.py  parsercombinators.py  pyproject.toml  setup.cfg  setup.py  setup_stringview.py  syntaxtree.py  toolkit.py  upload.sh  (+2 more)
.run/: LaTeXParser.run.xml  rst_doctest.run.xml
DHParser/: DSLsupport.py  EBNFcompiler.py  __init__.py  base.py  compile.pxd  compile.py  configuration.py  cstringview.pyx  dsl.py  ebnf.pxd  ebnf.py  ebnf.py_old  ebnf.py_orig  ebnf_orig.py  error.pxd  error.py  foreign_typing.py  json_validation.py  json_validation.py_new  json_validation.py_old  log.py  lsp.py  nodetree.pxd  nodetree.py  nodetree.py_2  parse.pxd  parse.py  parse.py_1st_failed_attempt  parse_stringview_based.py  parser.py  parsercombinators.py  parsers.py  pipeline.py  preprocess.py  pstringview.py  server.py  shadow_cython.py  stringview.c  stringview.pxd  stringview.py  (+14 more)
DHParser/VERALTET/: cstringview.pyx  foreign_cython.py  transformation_factory.py
DHParser/ebnf_flavors/: __init__.py  heuristic.py
DHParser/externallibs/: dataclasses36.py  lsp316dataclasses.py  shadow_cython.py  shadow_cython.pyi  typing_extensions.py
DHParser/nim/: README.md  nodetree.nim  parse.nim
DHParser/parsers/: HTMLParser.py  XMLParser.py  __init__.py
DHParser/scripts/: XMLreflow.py  __init__.py  dhparser.py  dhparser_cythonize.py  dhparser_cythonize_stringview.py  dhparser_rename.py  ts2pythonParser.py  update_lsp.py
DHParser/templates/: DSLApp.pyi  DSLApp_old.pyi  DSLCompiler.pyi  DSLConfig.ini  DSLParser.pyi  DSLServer.pyi  DSLServer.pyi.outdated  README.txt  example_02_test_Structure_and_Components.ini  example_DSL.ebnf  readme_template.md  tst_DSL_grammar.pyi
DHParser/ts2python/: __init__.py  json_validation.py  singledispatch_shim.py  ts2pythonParser.py  typeddict_shim.py  typing_extensions.py
DevScripts/: Readme-DevScripts.md  collect_symbols.py  create_standalone.py  test_stringview_performance.py
OLDSTUFF/: ParserCombinators_obsolete.py  test_ParserCombinators.py
OLDSTUFF/DHParser-Testbed/: Testbed.ebnf  readme.md
SCRATCH/: parse_alt.py
devscripts/: collect_symbols.py  collect_type_alias.py  extract-docstrings.py  fix_permissions.py  multiprocessing_test.py  process_test.py  stringview_performance_test.py
documentation/: .buildinfo  Makefile  ModuleReference.html  ModuleReference.rst  ReferenceManual.html  ReferenceManual.md  StepByStepGuide.html  StepByStepGuide.rst  UserGuide.html  UserGuide.rst  UsersGuide.md  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/_modules/: compile.html  (+13 more)
documentation_sources/: StepByStepGuide.rst  index.rst
documentation_src/: Makefile  Manual.rst  Manuals.rst  ModuleReference.rst  Overview.rst  Reference.rst  StepByStepGuide.rst  UserGuide.rst  conf.py  index.rst
examples/: check_examples.py
experimental/: EBNFParser.py  LatexParser.py  MLW.enbf  MLW_inconsequenter.mlw  MLW_inconsultus.mlw  Markdown.ebnf  ParserCombinators.py  ParserCombinators_no_TOKEN_KEYWORD.py  README.txt  RMLW.enbf  ebnf.ebnf  ebnf_bootstrap.py  re_failure_test.py  re_slow_testcase.py  regex_test.ebnf  test.py  test_stringview_performance.py  test_syntax_tree.py
language_server/: EBNFLanguageServer.py  FlexibleEBNFServer.py
nim_rewrite/: LICENSE_PCRE.txt  README.md  nimdoc  nimdoc.nim  nimparser.nimble  nodetree  nodetree.nim  oop.nim  parse  parse.nim
profiling/: profile_grammar_compilation.py  profile_nodetree.py  profile_syntaxtree.py
scratch/: Arithmetic5Parser.py  CONTRIBUTING.md  NamedTupleTest  NamedTupleTest.py  OldXMLParser.py  TypeDict_NotRequired.py  XMLExample.xml  XMLExample2.xml  XMLExample_reflow.xml  argparse_test.py  asycio_and_streams.py  been_there.error.txt  beispiel_xml_nach_json.txt  client_capabilities.json  convertEBNF.py  doctest_test.py  enivon.py  example.xml  gather_regexps.py  grammar_validation.py  interpreterpool.py  json_inline_grammar.py  key_value_example.py  left_recursion_old.py  lsp.py  markup_test.py  mockstreams.py  multiply_data.py  namedtuple.py  nodes.py  notest_interpreterpool.py  parse_stringview_based.py  parse_xml.py  parser_Grammar_as_ebnf.py  path_check.py  path_test.py  personCollections.pkl  personTyping.pkl  prcess_pool_test.py  process_events.py  (+14 more)
scripts/: dhparser.py  rename_project.py
test/: notest_server.py  re_slow_testcase.py  run.py  test_DHParser.py  test_base.py  test_compile.py  test_configuration.py  test_cstringview.py  test_dhparser.py  test_dsl.py  test_ebnf.py  test_error.py  test_parse.py  test_parser.py  test_parsers.py  test_preprocess.py  test_pstringview.py  test_server.py  test_stringview.py  test_syntaxtree.py  test_testing.py  test_toolkit.py  test_trace.py  test_transform.py
tests/: PopRetrieve2Test.txt  PopRetrieveTest.txt  link_checker.py  mockstreams.py  notest_interpreterpool.py  notest_multiprocessing_fork.py  notest_multiprocessing_forkserver.py  notest_multiprocessing_spawn.py  notest_server.py  notest_server_streams.py  notest_server_tcp.py  run.py  run_all_tests.py  run_doctests.py  run_unit_tests.py  setup_mock_project.sh  test_DHParser.py  test_EBNFcompiler.py  test_ParserCombinators.py  test_compile.py  test_configuration.py  test_dhparser.py  test_dsl.py  test_ebnf.py  test_error.py  test_late_binding.py  test_log.py  test_lsp.py  test_markdown.py  test_nodetree.py  test_parse.py  test_parsercombinators.py  test_parsers.py  test_pipeline.py  test_preprocess.py  test_server.py.detach_server_variant  test_server_streams.py  test_server_utils.py  test_stringview.py  test_syntaxtree.py  (+4 more)
(+1791 files in other folders)
