[tool.poetry]
name = "DHParser"
version = "1.3.1"
description = "Parser Generator and DSL-construction-kit"

license = "Apache-2"

authors = ["Eckhart Arnold <eckhart.arnold@posteo.de>"]

readme = "README.md"

include = ['CHANGES.txt', 'Introduction.md']

repository = "https://gitlab.lrz.de/badw-it/DHParser"
homepage = "https://gitlab.lrz.de/badw-it/DHParser"
documentation = "https://dhparser.readthedocs.io/en/latest/"

keywords = [
    'parser generator',
    'domain specific languages',
    'Digital Humanities',
    'parsing expression grammar',
    'EBNF'
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Text Processing :: Markup',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Compilers'
]

packages = [
    { include = "DHParser" },
    { include = "tests", format = "sdist" },
    { include = "documentation_src", format = "sdist" },
    { include = "examples", format = "sdist" }
]


# build = "DHParser/scripts/dhparser_build_cython.py"

# IN THE FUTURE, MAYBE:
# [tool.poetry.build]
# script = "DHParser/scripts/dhparser_build_cython.py"
# generate-setup-file = false


[tool.poetry.dependencies]
python = "^3.7"
regex = { version = "*", optional = true }
cython = { version = "^0.3", optional = true }


[tool.poetry.dev-dependencies]
pytest = "^5.0"


[tool.poetry.scripts]
dhparser = 'DHParser.scripts.dhparser:main'
dhparser_build_cython = 'DHParser.scripts.dhparser_build_cython:main'


[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=0.3", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
