[project]
name = "DHParser"
version = "1.9.0"  # make sure that this is the same as in DHParser/versionnumber.py !
description = "Parser Generator and DSL-construction-kit"

license = { text = "Apache-2.0" }

authors = [ { name = "Eckhart Arnold", email= "eckhart.arnold@posteo.de" } ]

readme = "README.md"
requires-python = ">=3.7"

keywords = [
    'parser',
    'parser generator',
    'domain specific languages',
    'Digital Humanities',
    'parsing expression grammar',
    'formal grammar',
    'EBNF', 'SXML', 'XML'
]


[project.urls]
repository = "https://gitlab.lrz.de/badw-it/DHParser"
homepage = "https://gitlab.lrz.de/badw-it/DHParser"
documentation = "https://dhparser.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/jecki/DHParser/issues"

[project.scripts]
dhparser = 'DHParser.scripts.dhparser:main'
dhparser_build_cython = 'DHParser.scripts.dhparser_cythonize:main'
dhparser_cythononize = 'DHParser.scripts.dhparser_cythonize:main'
dhparser_cythonize_stringview = 'DHParser.scripts.dhparser_cythonize:main'
xml_reflow = 'DHParser.scripts.XMLreflow:main'

[project.optional-dependencies]
regex = ["regex"]
cython = ["cython>=3.0"]
sphinx = ["sphinx (>=8.0) ; python_version >= '3.10'"]
pytest = ["pytest>=5.0"]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [ { include = "DHParser" } ]
include = ['CHANGES.txt', 'Introduction.md']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: Text Processing :: Markup',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Software Development :: Compilers'
]


[build-system]
requires = ["poetry-core>=2.0.0", "setuptools"]  # "wheel", "Cython>=0.30"
build-backend = "poetry.core.masonry.api"

# to check this file use:
# $ poetry install --dry-run

# to publish to pypi use commands:
# $ poetry config pypi-token.pypi [DHPARSER PYPI-TOKEN]
# $ poetry build
# $ poetry publish
